--- a/Exercises/1_a_Python.ipynb
+++ b/Exercises/1_a_Python.ipynb
@@ -1,88 +1,136 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Exercise I: Your own Python module "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "running in Colab: False\n"
-     ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.6"
+    },
+    "colab": {
+      "name": "1_a_Python.ipynb",
+      "provenance": []
     }
-   ],
-   "source": [
-    "#check if notebook runs in colab\n",
-    "import sys\n",
-    "IN_COLAB = 'google.colab' in sys.modules\n",
-    "print('running in Colab:',IN_COLAB)\n",
-    "path='..'\n",
-    "if IN_COLAB:\n",
-    "  #in colab, we need to clone the data from the repo\n",
-    "  !git clone https://github.com/keuperj/DataScienceSS20.git\n",
-    "  path='DataScienceSS20'\n",
-    "  import sys\n",
-    "  sys.path.append(path+'/Exercises/')"
-   ]
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Write your own python module (choose a name) with the following properties:\n",
-    "\n",
-    "1. start new python file for the module\n",
-    "2. define a class ***ListKeeper*** with the following properties and API:\n",
-    "   1. ***Listkeeper*** strores named lists (hint: use dictionaries) \n",
-    "   2. it initializes with a list named *example*: [1,2,3,4,5]\n",
-    "   3. ``show()`` returns all list names\n",
-    "   4. ``add(name, list)`` adds a new list\n",
-    "   5. ``delete(name)`` deletes list\n",
-    "   6. ``sort(name)`` returns the sorted list *name*\n",
-    "   7. ``append(name, list)`` appends *list* to *name* \n",
-    "3. add comments and documentation to your class\n",
-    "4. Import your module in this notebook\n",
-    "5. write tests to check the functionality of your class "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import MySuperModule"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NtDJNbvVUL60",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Exercise I: Your own Python module "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cxuobc8sUL62",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 170
+        },
+        "outputId": "adde7741-dc63-4903-eacd-48eb3a7b18fa"
+      },
+      "source": [
+        "#check if notebook runs in colab\n",
+        "import sys\n",
+        "IN_COLAB = 'google.colab' in sys.modules\n",
+        "print('running in Colab:',IN_COLAB)\n",
+        "path='..'\n",
+        "if IN_COLAB:\n",
+        "  #in colab, we need to clone the data from the repo\n",
+        "  !git clone https://github.com/keuperj/DataScienceSS20.git\n",
+        "  path='DataScienceSS20'\n",
+        "  import sys\n",
+        "  sys.path.append(path+'/Exercises/')"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "running in Colab: True\n",
+            "Cloning into 'DataScienceSS20'...\n",
+            "remote: Enumerating objects: 27, done.\u001b[K\n",
+            "remote: Counting objects: 100% (27/27), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (24/24), done.\u001b[K\n",
+            "remote: Total 550 (delta 14), reused 15 (delta 3), pack-reused 523\n",
+            "Receiving objects: 100% (550/550), 122.00 MiB | 23.14 MiB/s, done.\n",
+            "Resolving deltas: 100% (218/218), done.\n",
+            "Checking out files: 100% (210/210), done.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3n0ULyJgUL68",
+        "colab_type": "text"
+      },
+      "source": [
+        "Write your own python module (choose a name) with the following properties:\n",
+        "\n",
+        "1. start new python file for the module\n",
+        "2. define a class ***ListKeeper*** with the following properties and API:\n",
+        "   1. ***Listkeeper*** strores named lists (hint: use dictionaries) \n",
+        "   2. it initializes with a list named *example*: [1,2,3,4,5]\n",
+        "   3. ``show()`` returns all list names\n",
+        "   4. ``add(name, list)`` adds a new list\n",
+        "   5. ``delete(name)`` deletes list\n",
+        "   6. ``sort(name)`` returns the sorted list *name*\n",
+        "   7. ``append(name, list)`` appends *list* to *name* \n",
+        "3. add comments and documentation to your class\n",
+        "4. Import your module in this notebook\n",
+        "5. write tests to check the functionality of your class "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wHuEkhDkUL69",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 299
+        },
+        "outputId": "c48068da-9db2-488f-a932-eddd6182271a"
+      },
+      "source": [
+        "import MyModule"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-7783eb9fc788>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mMyModule\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'MyModule'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ]
+        }
+      ]
+    }
+  ]
 }
