--- a/Exercises/1_a_Python.ipynb
+++ b/Exercises/1_a_Python.ipynb
@@ -42,9 +42,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 170
+          "height": 51
         },
-        "outputId": "adde7741-dc63-4903-eacd-48eb3a7b18fa"
+        "outputId": "54dc0313-2c73-4a7b-ade0-1bbeb1d83727"
       },
       "source": [
         "#check if notebook runs in colab\n",
@@ -54,25 +54,18 @@
         "path='..'\n",
         "if IN_COLAB:\n",
         "  #in colab, we need to clone the data from the repo\n",
-        "  !git clone https://github.com/keuperj/DataScienceSS20.git\n",
+        "  !git clone https://github.com/dav-92/DataScienceSS20.git\n",
         "  path='DataScienceSS20'\n",
         "  import sys\n",
         "  sys.path.append(path+'/Exercises/')"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "running in Colab: True\n",
-            "Cloning into 'DataScienceSS20'...\n",
-            "remote: Enumerating objects: 27, done.\u001b[K\n",
-            "remote: Counting objects: 100% (27/27), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (24/24), done.\u001b[K\n",
-            "remote: Total 550 (delta 14), reused 15 (delta 3), pack-reused 523\n",
-            "Receiving objects: 100% (550/550), 122.00 MiB | 23.14 MiB/s, done.\n",
-            "Resolving deltas: 100% (218/218), done.\n",
-            "Checking out files: 100% (210/210), done.\n"
+            "fatal: destination path 'DataScienceSS20' already exists and is not an empty directory.\n"
           ],
           "name": "stdout"
         }
@@ -106,29 +99,263 @@
       "metadata": {
         "id": "wHuEkhDkUL69",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 299
-        },
-        "outputId": "c48068da-9db2-488f-a932-eddd6182271a"
+        "colab": {}
       },
       "source": [
         "import MyModule"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sKPpVa_LZxu_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b036c109-8a17-4630-d983-1a682aefc630"
+      },
+      "source": [
+        "lk = MyModule.ListKeeper()\n",
+        "lk.show()"
+      ],
+      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-7783eb9fc788>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mMyModule\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'MyModule'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_keys(['example'])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gv-iYlRHbgjX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d2d4034c-4df9-4c88-9e9c-75513b8f795f"
+      },
+      "source": [
+        "lk.values()"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_values([[1, 2, 3, 4, 5]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V3yiH0rpZ_UU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "1ca64ddd-1578-4a33-e8d2-55cbfdea93a6"
+      },
+      "source": [
+        "lk.add('newList', [\"a\", \"b\", \"c\"])\n",
+        "lk.show()"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_keys(['example', 'newList'])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NSsEfgo_bjUc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f4aff6d7-1a14-4182-8e3e-d34d39c281a3"
+      },
+      "source": [
+        "\n",
+        "lk.values()"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_values([[1, 2, 3, 4, 5], ['a', 'b', 'c']])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "99I5eGqibne9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "lk.delete('newList')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jbd_s0zabtof",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a52f1ac0-f558-4578-baa0-62308df91448"
+      },
+      "source": [
+        "lk.values()"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_values([[1, 2, 3, 4, 5]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3VCqzAjmb1e-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "lk.append('example', [1, 2, 3])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lZ3Gaj0Yb6Rc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4502f177-cce9-4ccb-99bb-b57e39ec7246"
+      },
+      "source": [
+        "lk.values()"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_values([[1, 2, 3, 4, 5, 1, 2, 3]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DndlMIPScV-6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "lk.sort('example')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9e58zeXxcZeb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b6addf11-a318-490a-ca9c-3f17319c8f7a"
+      },
+      "source": [
+        "lk.values()"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_values([[1, 1, 2, 2, 3, 3, 4, 5]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
         }
       ]
     }
