--- a/Exercises/2_a_Numpy.ipynb
+++ b/Exercises/2_a_Numpy.ipynb
@@ -1,100 +1,366 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Exercise 3: Numpy"
-   ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.6"
+    },
+    "colab": {
+      "name": "2_a_Numpy.ipynb",
+      "provenance": []
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Perform the follwing tasks:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#3.1: import the numpy library"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#3.2: create a random 10x10 array named A\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#3.3: return only the odd rows of A"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#3.4: perform a matrix multiplication of A with it's transposed\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#3.5: compute the matrix inverse of A\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#3.6: divide all entries of A which are lager than 0.5 by 2 (hint: use where() )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1IqyNJ1hHbiQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Exercise 3: Numpy"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lcvC_4bjHbiS",
+        "colab_type": "text"
+      },
+      "source": [
+        "Perform the follwing tasks:\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SiU3h8icHbiT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#3.1: import the numpy library\n",
+        "import numpy as np"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gcYMThhZHbiX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 357
+        },
+        "outputId": "444000cf-b91b-4449-b41f-a059ea73d127"
+      },
+      "source": [
+        "#3.2: create a random 10x10 array named A\n",
+        "A = np.random.rand(10, 10)\n",
+        "A"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.58308208, 0.38458906, 0.38363759, 0.42793668, 0.81660522,\n",
+              "        0.37845611, 0.78292036, 0.33105122, 0.12011705, 0.6476161 ],\n",
+              "       [0.40299854, 0.91044316, 0.88815473, 0.38306072, 0.13276799,\n",
+              "        0.92922047, 0.56980283, 0.70390823, 0.01033156, 0.75294423],\n",
+              "       [0.92603028, 0.72800162, 0.17930404, 0.62559451, 0.04245658,\n",
+              "        0.9069707 , 0.26310962, 0.08513166, 0.31805554, 0.63417088],\n",
+              "       [0.46710842, 0.08658496, 0.45430248, 0.47114799, 0.90945114,\n",
+              "        0.0253041 , 0.38909396, 0.0360746 , 0.88895629, 0.34038834],\n",
+              "       [0.62573807, 0.20626447, 0.4935807 , 0.80401218, 0.40925382,\n",
+              "        0.55518804, 0.21521689, 0.08972836, 0.02881443, 0.56650105],\n",
+              "       [0.34027059, 0.30348049, 0.57114399, 0.14518241, 0.86339097,\n",
+              "        0.88523719, 0.19393583, 0.00936269, 0.46679165, 0.46978287],\n",
+              "       [0.22061064, 0.94380699, 0.26295413, 0.17775371, 0.72933877,\n",
+              "        0.48901363, 0.34504099, 0.16962252, 0.40584359, 0.70061121],\n",
+              "       [0.82171721, 0.93588334, 0.523815  , 0.61853074, 0.70457544,\n",
+              "        0.39412999, 0.09232594, 0.94935701, 0.69454559, 0.72520887],\n",
+              "       [0.86213034, 0.41321526, 0.40079028, 0.75934413, 0.08512961,\n",
+              "        0.99445882, 0.94272744, 0.70159567, 0.98126107, 0.82201428],\n",
+              "       [0.94260809, 0.28578895, 0.8741455 , 0.56169268, 0.61178999,\n",
+              "        0.19011267, 0.04885761, 0.11335211, 0.08554787, 0.7960914 ]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2KQy1hW1Hbib",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 187
+        },
+        "outputId": "8fb84c5a-50cb-450a-909e-0c2c729aa73a"
+      },
+      "source": [
+        "#3.3: return only the odd rows of \n",
+        "A[::2]"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.58308208, 0.38458906, 0.38363759, 0.42793668, 0.81660522,\n",
+              "        0.37845611, 0.78292036, 0.33105122, 0.12011705, 0.6476161 ],\n",
+              "       [0.92603028, 0.72800162, 0.17930404, 0.62559451, 0.04245658,\n",
+              "        0.9069707 , 0.26310962, 0.08513166, 0.31805554, 0.63417088],\n",
+              "       [0.62573807, 0.20626447, 0.4935807 , 0.80401218, 0.40925382,\n",
+              "        0.55518804, 0.21521689, 0.08972836, 0.02881443, 0.56650105],\n",
+              "       [0.22061064, 0.94380699, 0.26295413, 0.17775371, 0.72933877,\n",
+              "        0.48901363, 0.34504099, 0.16962252, 0.40584359, 0.70061121],\n",
+              "       [0.86213034, 0.41321526, 0.40079028, 0.75934413, 0.08512961,\n",
+              "        0.99445882, 0.94272744, 0.70159567, 0.98126107, 0.82201428]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vVq98C7YHbif",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 357
+        },
+        "outputId": "4502373d-4fdf-46b4-98d1-58ef5dde6362"
+      },
+      "source": [
+        "#3.4: perform a matrix multiplication of A with it's transposed\n",
+        "A.dot(A.T)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[2.78466808, 2.71787089, 2.21743458, 2.07760213, 2.09045791,\n",
+              "        2.15167957, 2.27797961, 2.96888044, 3.20675701, 2.4084077 ],\n",
+              "       [2.71787089, 4.19514073, 2.97392277, 1.50788076, 2.36918614,\n",
+              "        2.38915806, 2.64877531, 3.6192471 , 3.96595554, 2.59741081],\n",
+              "       [2.21743458, 2.97392277, 3.21524138, 1.53740596, 2.27470211,\n",
+              "        2.06702145, 2.20283378, 3.096432  , 3.69280604, 2.34204097],\n",
+              "       [2.07760213, 1.50788076, 1.53740596, 2.54060307, 1.6048571 ,\n",
+              "        1.97136967, 1.80327915, 2.57944892, 2.62513677, 2.05814367],\n",
+              "       [2.09045791, 2.36918614, 2.27470211, 1.6048571 , 2.17599631,\n",
+              "        1.84113193, 1.67347249, 2.50613576, 2.77978528, 2.36190616],\n",
+              "       [2.15167957, 2.38915806, 2.06702145, 1.97136967, 1.84113193,\n",
+              "        2.56054589, 2.18716675, 2.60151733, 2.74535497, 2.10925245],\n",
+              "       [2.27797961, 2.64877531, 2.20283378, 1.80327915, 1.67347249,\n",
+              "        2.18716675, 2.6146415 , 3.00172227, 2.78738549, 1.97510652],\n",
+              "       [2.96888044, 3.6192471 , 3.096432  , 2.57944892, 2.50613576,\n",
+              "        2.60151733, 3.00172227, 4.77794852, 4.25745809, 3.10219031],\n",
+              "       [3.20675701, 3.96595554, 3.69280604, 2.62513677, 2.77978528,\n",
+              "        2.74535497, 2.78738549, 4.25745809, 5.6669996 , 2.81268117],\n",
+              "       [2.4084077 , 2.59741081, 2.34204097, 2.05814367, 2.36190616,\n",
+              "        2.10925245, 1.97510652, 3.10219031, 2.81268117, 3.1165599 ]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DHNDAvNFHbii",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 357
+        },
+        "outputId": "6c708cb2-1281-4899-a142-eea13c238d85"
+      },
+      "source": [
+        "#3.5: compute the matrix inverse of A\n",
+        "np.linalg.inv(A)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0.94425431, -0.10613297,  1.39425213,  0.15056264, -1.48523854,\n",
+              "         0.21703338, -1.32773197,  0.26409178, -0.44112702,  0.46941794],\n",
+              "       [-0.06837232,  0.8589587 ,  1.07953931,  0.96316371, -0.45526215,\n",
+              "        -0.63945346,  0.17755745,  0.04985834, -0.96817235, -0.52924232],\n",
+              "       [-0.56423763,  1.28565545,  0.04472951,  1.08764793, -0.39202874,\n",
+              "        -0.02714788, -0.5921524 , -0.37623563, -0.43962351,  0.35514369],\n",
+              "       [-0.51554506,  0.16221279, -0.18036399,  0.64803245,  2.07851228,\n",
+              "        -0.78465226,  0.20296877,  0.11137609, -0.23772174, -0.9180964 ],\n",
+              "       [ 0.73422491, -0.37729867, -0.16753894, -0.06662339,  0.27291501,\n",
+              "         0.57391134, -0.13981886,  0.42028836, -0.45712617, -0.39917424],\n",
+              "       [-0.00368641, -0.07300136,  0.15522451, -0.54951303,  0.34274214,\n",
+              "         1.01948079, -0.36223067,  0.07585285,  0.09426357, -0.50980124],\n",
+              "       [ 0.93554293,  0.61608714,  0.4073869 ,  0.76080728, -0.5842717 ,\n",
+              "        -0.49540902, -0.30611172, -0.62536173, -0.08935136, -0.35412803],\n",
+              "       [ 0.40972431, -0.16812291, -0.75128321, -0.817504  ,  0.07193323,\n",
+              "         0.25722033, -0.50979701,  0.99161075,  0.34079445, -0.23581136],\n",
+              "       [-0.83729142, -0.10817212, -0.06442076,  0.59774607, -0.36506828,\n",
+              "         0.02065422,  0.31547509, -0.04231096,  0.49585935,  0.07567342],\n",
+              "       [-0.69933133, -1.40371607, -1.77968202, -1.98765259,  0.65923164,\n",
+              "        -0.1369345 ,  2.26678352, -0.43542127,  1.75279479,  1.623813  ]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n7iE-kJ8Hbim",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#3.6: divide all entries of A which are lager than 0.5 by 2 (hint: use where() )"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zSTEXdLdHbip",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 357
+        },
+        "outputId": "d70ce2e3-dd6e-4865-ec08-118fb502f014"
+      },
+      "source": [
+        "np.where(A > 0.5, A / 2, A)"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.29154104, 0.38458906, 0.38363759, 0.42793668, 0.40830261,\n",
+              "        0.37845611, 0.39146018, 0.33105122, 0.12011705, 0.32380805],\n",
+              "       [0.40299854, 0.45522158, 0.44407736, 0.38306072, 0.13276799,\n",
+              "        0.46461024, 0.28490142, 0.35195411, 0.01033156, 0.37647211],\n",
+              "       [0.46301514, 0.36400081, 0.17930404, 0.31279725, 0.04245658,\n",
+              "        0.45348535, 0.26310962, 0.08513166, 0.31805554, 0.31708544],\n",
+              "       [0.46710842, 0.08658496, 0.45430248, 0.47114799, 0.45472557,\n",
+              "        0.0253041 , 0.38909396, 0.0360746 , 0.44447814, 0.34038834],\n",
+              "       [0.31286904, 0.20626447, 0.4935807 , 0.40200609, 0.40925382,\n",
+              "        0.27759402, 0.21521689, 0.08972836, 0.02881443, 0.28325053],\n",
+              "       [0.34027059, 0.30348049, 0.285572  , 0.14518241, 0.43169549,\n",
+              "        0.4426186 , 0.19393583, 0.00936269, 0.46679165, 0.46978287],\n",
+              "       [0.22061064, 0.4719035 , 0.26295413, 0.17775371, 0.36466938,\n",
+              "        0.48901363, 0.34504099, 0.16962252, 0.40584359, 0.35030561],\n",
+              "       [0.4108586 , 0.46794167, 0.2619075 , 0.30926537, 0.35228772,\n",
+              "        0.39412999, 0.09232594, 0.47467851, 0.34727279, 0.36260444],\n",
+              "       [0.43106517, 0.41321526, 0.40079028, 0.37967207, 0.08512961,\n",
+              "        0.49722941, 0.47136372, 0.35079783, 0.49063054, 0.41100714],\n",
+              "       [0.47130405, 0.28578895, 0.43707275, 0.28084634, 0.305895  ,\n",
+              "        0.19011267, 0.04885761, 0.11335211, 0.08554787, 0.3980457 ]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "klfMWCteMAnH",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 357
+        },
+        "outputId": "23bedaf7-c004-4f28-93db-8172dbb4c043"
+      },
+      "source": [
+        "#vergleich\n",
+        "A"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.58308208, 0.38458906, 0.38363759, 0.42793668, 0.81660522,\n",
+              "        0.37845611, 0.78292036, 0.33105122, 0.12011705, 0.6476161 ],\n",
+              "       [0.40299854, 0.91044316, 0.88815473, 0.38306072, 0.13276799,\n",
+              "        0.92922047, 0.56980283, 0.70390823, 0.01033156, 0.75294423],\n",
+              "       [0.92603028, 0.72800162, 0.17930404, 0.62559451, 0.04245658,\n",
+              "        0.9069707 , 0.26310962, 0.08513166, 0.31805554, 0.63417088],\n",
+              "       [0.46710842, 0.08658496, 0.45430248, 0.47114799, 0.90945114,\n",
+              "        0.0253041 , 0.38909396, 0.0360746 , 0.88895629, 0.34038834],\n",
+              "       [0.62573807, 0.20626447, 0.4935807 , 0.80401218, 0.40925382,\n",
+              "        0.55518804, 0.21521689, 0.08972836, 0.02881443, 0.56650105],\n",
+              "       [0.34027059, 0.30348049, 0.57114399, 0.14518241, 0.86339097,\n",
+              "        0.88523719, 0.19393583, 0.00936269, 0.46679165, 0.46978287],\n",
+              "       [0.22061064, 0.94380699, 0.26295413, 0.17775371, 0.72933877,\n",
+              "        0.48901363, 0.34504099, 0.16962252, 0.40584359, 0.70061121],\n",
+              "       [0.82171721, 0.93588334, 0.523815  , 0.61853074, 0.70457544,\n",
+              "        0.39412999, 0.09232594, 0.94935701, 0.69454559, 0.72520887],\n",
+              "       [0.86213034, 0.41321526, 0.40079028, 0.75934413, 0.08512961,\n",
+              "        0.99445882, 0.94272744, 0.70159567, 0.98126107, 0.82201428],\n",
+              "       [0.94260809, 0.28578895, 0.8741455 , 0.56169268, 0.61178999,\n",
+              "        0.19011267, 0.04885761, 0.11335211, 0.08554787, 0.7960914 ]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
+        }
+      ]
+    }
+  ]
 }
