--- a/Exercises/6_b_AutoSkLearn_Regression_NY_Taxy.ipynb
+++ b/Exercises/6_b_AutoSkLearn_Regression_NY_Taxy.ipynb
@@ -1,151 +1,423 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Block 6 Exercise 2: finding the best parameters for predicting the fare of taxi rides\n",
-    "We return to our Random Forest Regression and want to automatically optimize all free parameters ..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import folium\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "running in Colab: False\n"
-     ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.6"
+    },
+    "colab": {
+      "name": "6_b_AutoSkLearn_Regression_NY_Taxy.ipynb",
+      "provenance": []
     }
-   ],
-   "source": [
-    "#check if notebook runs in colab\n",
-    "import sys\n",
-    "IN_COLAB = 'google.colab' in sys.modules\n",
-    "print('running in Colab:',IN_COLAB)\n",
-    "path='..'\n",
-    "if IN_COLAB:\n",
-    "  #in colab, we need to clone the data from the repo\n",
-    "  !git clone https://github.com/keuperj/DataScienceSS20.git\n",
-    "  path='DataScienceSS20'"
-   ]
   },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# we load the data we have saved after wrangling and pre-processing in block I\n",
-    "X=pd.read_csv(path+'/DATA/train_cleaned.csv')\n",
-    "drop_columns=['Unnamed: 0','Unnamed: 0.1','Unnamed: 0.1.1','key','pickup_datetime','pickup_date','pickup_latitude_round3','pickup_longitude_round3','dropoff_latitude_round3','dropoff_longitude_round3']\n",
-    "X=X.drop(drop_columns,axis=1)\n",
-    "X=pd.get_dummies(X)# one hot coding\n",
-    "#generate labels\n",
-    "y=X['fare_amount']\n",
-    "X=X.drop(['fare_amount'],axis=1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Scikit Optimize\n",
-    "Scikit Optimize (https://scikit-optimize.github.io/stable/index.html) is a AutoML toolbox wrapped around Scikit-Learn. It allows us to use state-of-the-art automatic hyper-parameter optimization on top of our learning algorithms.   \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
+  "cells": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting scikit-optimize\n",
-      "  Downloading scikit_optimize-0.7.4-py2.py3-none-any.whl (80 kB)\n",
-      "\u001b[K     |████████████████████████████████| 80 kB 1.0 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: scikit-learn>=0.19.1 in /home/keuper/anaconda3/lib/python3.7/site-packages (from scikit-optimize) (0.22.1)\n",
-      "Requirement already satisfied: scipy>=0.18.0 in /home/keuper/anaconda3/lib/python3.7/site-packages (from scikit-optimize) (1.4.1)\n",
-      "Requirement already satisfied: joblib>=0.11 in /home/keuper/anaconda3/lib/python3.7/site-packages (from scikit-optimize) (0.14.1)\n",
-      "Requirement already satisfied: numpy>=1.11.0 in /home/keuper/anaconda3/lib/python3.7/site-packages (from scikit-optimize) (1.18.1)\n",
-      "Collecting pyaml>=16.9\n",
-      "  Downloading pyaml-20.4.0-py2.py3-none-any.whl (17 kB)\n",
-      "Requirement already satisfied: PyYAML in /home/keuper/anaconda3/lib/python3.7/site-packages (from pyaml>=16.9->scikit-optimize) (5.3)\n",
-      "Installing collected packages: pyaml, scikit-optimize\n",
-      "Successfully installed pyaml-20.4.0 scikit-optimize-0.7.4\n"
-     ]
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1bWThUExooJU",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Block 6 Exercise 2: finding the best parameters for predicting the fare of taxi rides\n",
+        "We return to our Random Forest Regression and want to automatically optimize all free parameters ..."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d-VJ2YQbooJY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import folium\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vuyjTbbvooJd",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        },
+        "outputId": "692bf24f-d383-40bb-96cc-d32b1d1fd4bf"
+      },
+      "source": [
+        "#check if notebook runs in colab\n",
+        "import sys\n",
+        "IN_COLAB = 'google.colab' in sys.modules\n",
+        "print('running in Colab:',IN_COLAB)\n",
+        "path='..'\n",
+        "if IN_COLAB:\n",
+        "  #in colab, we need to clone the data from the repo\n",
+        "  !git clone https://github.com/keuperj/DataScienceSS20.git\n",
+        "  path='DataScienceSS20'"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "running in Colab: True\n",
+            "Cloning into 'DataScienceSS20'...\n",
+            "remote: Enumerating objects: 586, done.\u001b[K\n",
+            "remote: Total 586 (delta 0), reused 0 (delta 0), pack-reused 586\u001b[K\n",
+            "Receiving objects: 100% (586/586), 130.66 MiB | 23.77 MiB/s, done.\n",
+            "Resolving deltas: 100% (240/240), done.\n",
+            "Checking out files: 100% (219/219), done.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d0JwAqDYooJh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# we load the data we have saved after wrangling and pre-processing in block I\n",
+        "X=pd.read_csv(path+'/DATA/train_cleaned.csv')\n",
+        "drop_columns=['Unnamed: 0','Unnamed: 0.1','Unnamed: 0.1.1','key','pickup_datetime','pickup_date','pickup_latitude_round3','pickup_longitude_round3','dropoff_latitude_round3','dropoff_longitude_round3']\n",
+        "X=X.drop(drop_columns,axis=1)\n",
+        "X=pd.get_dummies(X)# one hot coding\n",
+        "#generate labels\n",
+        "y=X['fare_amount']\n",
+        "X=X.drop(['fare_amount'],axis=1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "p6VDM844ooJl",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Scikit Optimize\n",
+        "Scikit Optimize (https://scikit-optimize.github.io/stable/index.html) is a AutoML toolbox wrapped around Scikit-Learn. It allows us to use state-of-the-art automatic hyper-parameter optimization on top of our learning algorithms.   \n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nYD6JJLxooJl",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "ac3c9eea-a0cd-479e-9b9f-865586b6192a"
+      },
+      "source": [
+        "# install \n",
+        "!pip install scikit-optimize"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting scikit-optimize\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/5c/87/310b52debfbc0cb79764e5770fa3f5c18f6f0754809ea9e2fc185e1b67d3/scikit_optimize-0.7.4-py2.py3-none-any.whl (80kB)\n",
+            "\r\u001b[K     |████                            | 10kB 23.3MB/s eta 0:00:01\r\u001b[K     |████████▏                       | 20kB 6.3MB/s eta 0:00:01\r\u001b[K     |████████████▎                   | 30kB 7.5MB/s eta 0:00:01\r\u001b[K     |████████████████▎               | 40kB 8.3MB/s eta 0:00:01\r\u001b[K     |████████████████████▍           | 51kB 6.9MB/s eta 0:00:01\r\u001b[K     |████████████████████████▌       | 61kB 7.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▌   | 71kB 7.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 81kB 5.2MB/s \n",
+            "\u001b[?25hRequirement already satisfied: scipy>=0.18.0 in /usr/local/lib/python3.6/dist-packages (from scikit-optimize) (1.4.1)\n",
+            "Requirement already satisfied: numpy>=1.11.0 in /usr/local/lib/python3.6/dist-packages (from scikit-optimize) (1.18.4)\n",
+            "Requirement already satisfied: scikit-learn>=0.19.1 in /usr/local/lib/python3.6/dist-packages (from scikit-optimize) (0.22.2.post1)\n",
+            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-optimize) (0.15.1)\n",
+            "Collecting pyaml>=16.9\n",
+            "  Downloading https://files.pythonhosted.org/packages/15/c4/1310a054d33abc318426a956e7d6df0df76a6ddfa9c66f6310274fb75d42/pyaml-20.4.0-py2.py3-none-any.whl\n",
+            "Requirement already satisfied: PyYAML in /usr/local/lib/python3.6/dist-packages (from pyaml>=16.9->scikit-optimize) (3.13)\n",
+            "Installing collected packages: pyaml, scikit-optimize\n",
+            "Successfully installed pyaml-20.4.0 scikit-optimize-0.7.4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0F2PppM6ooJp",
+        "colab_type": "text"
+      },
+      "source": [
+        "### E 2.1 Bayesian Optimization of a Random Forest Regression Model\n",
+        "use Bayesian Optimization with Cross-Validation (https://scikit-optimize.github.io/stable/modules/generated/skopt.BayesSearchCV.html#skopt.BayesSearchCV) to find the best regression model. Compare\n",
+        "* linear regression (https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html#sklearn.linear_model.LinearRegression) \n",
+        "* Random Forest regression (https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html#sklearn.ensemble.RandomForestRegressor)\n",
+        "* and SVM regression (https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVR.html#sklearn.svm.SVR)\n",
+        "\n",
+        "NOTES: this can become quite compute intensive! Hence,\n",
+        "* use a smaller subset of the training data to run the experiments \n",
+        "* think about the range of your parameters (e.g. larger number of trees in RF or high C-values in SMV will make models expensive)\n",
+        "* optimize only the following parameters per model type:\n",
+        "    * linear: no parameters to optimize\n",
+        "    * RF: #trees and depth\n",
+        "    * SVM: C and gamma (use RBF kernel)\n",
+        "* parallelize -> n_jobs\n",
+        "* use CoLab to rum the job for up to 12h \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mqNzvCNAooJp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from skopt import BayesSearchCV\n",
+        "from sklearn.ensemble import RandomForestRegressor\n",
+        "from sklearn.svm import SVR"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "20Y1d1nnX_57",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X_train = X[X.pickup_year == 2014]\n",
+        "X_test = X[X.pickup_year == 2015]\n",
+        "\n",
+        "y_train = y[X.pickup_year == 2014]\n",
+        "y_test = y[X.pickup_year == 2015]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kmlVM_MCauZT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#linear -> no parameters to optimze"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2IoZ2YIxZj84",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "bayes_rf = BayesSearchCV(RandomForestRegressor(), dict(n_estimators=[5,10,25,50]), n_jobs=8, n_iter=16)\n",
+        "bayes_rf.fit(X_train, y_train);"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sjIrRuezbO3e",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8c025b17-dda1-4806-db54-6e5da29b5f95"
+      },
+      "source": [
+        "bayes_rf.best_score_"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.846229142188592"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "seVnXRIfbl_-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ca0f6857-c3c2-4df5-950f-94f26f2a9519"
+      },
+      "source": [
+        "bayes_rf.best_params_"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OrderedDict([('n_estimators', 50)])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i4X9DW-ubn1P",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "14282033-08c2-4eef-8e7a-4b5d897407a9"
+      },
+      "source": [
+        "bayes_rf.score(X_test,y_test)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8298129348191596"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aPbgat9Latnz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "bayes_svm = BayesSearchCV(SVR(), dict(C=[1,2,5,10]), n_jobs=8, n_iter=16)\n",
+        "bayes_svm.fit(X_train, y_train);"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "34ttFfvqbPb-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "dd61146a-aef3-4d61-914d-b42f8550a309"
+      },
+      "source": [
+        "bayes_svm.best_score_ # manueller Abbruch nach mehreren Stunden Laufzeit..."
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.023750928077453003"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DU7PBs9Lbv7F",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "2ab9504b-a647-49a3-d5a1-4a7996e128c6"
+      },
+      "source": [
+        "bayes_svm.best_params_"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OrderedDict([('C', 10)])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G4qb4wiLbyXj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "bayes_svm.score(X_test,y_test)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
-   ],
-   "source": [
-    "# install \n",
-    "!pip install scikit-optimize"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### E 2.1 Bayesian Optimization of a Random Forest Regression Model\n",
-    "use Bayesian Optimization with Cross-Validation (https://scikit-optimize.github.io/stable/modules/generated/skopt.BayesSearchCV.html#skopt.BayesSearchCV) to find the best regression model. Compare\n",
-    "* linear regression (https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html#sklearn.linear_model.LinearRegression) \n",
-    "* Random Forest regression (https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html#sklearn.ensemble.RandomForestRegressor)\n",
-    "* and SVM regression (https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVR.html#sklearn.svm.SVR)\n",
-    "\n",
-    "NOTES: this can become quite compute intensive! Hence,\n",
-    "* use a smaller subset of the training data to run the experiments \n",
-    "* think about the range of your parameters (e.g. larger number of trees in RF or high C-values in SMV will make models expensive)\n",
-    "* optimize only the following parameters per model type:\n",
-    "    * linear: no parameters to optimize\n",
-    "    * RF: #trees and depth\n",
-    "    * SVM: C and gamma (use RBF kernel)\n",
-    "* parallelize -> n_jobs\n",
-    "* use CoLab to rum the job for up to 12h \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
+  ]
 }
