--- a/Exercises/7_b_CNNs.ipynb
+++ b/Exercises/7_b_CNNs.ipynb
@@ -1,130 +1,289 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "9qYJcxpwEyxC"
-   },
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "NgYV9F8IE2L_"
-   },
-   "source": [
-    "# Exercise 2 - Image Classification with CNNs\n",
-    "![CIFAR10](https://miro.medium.com/max/964/1*syyml8q8s1Yt-iEea5m1Ag.png)\n",
-    "\n",
-    "[CIFAR 10](https://www.cs.toronto.edu/~kriz/cifar.html) is a small toy data set for image classifaction. \n",
-    "\n",
-    "* It has 60k images from ten diffenrent classes (like car, airplane, horse,..)\n",
-    "* The RGB images are of size 32x32 pixels  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
     "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 71
+      "name": "Exercise_2 .ipynb",
+      "provenance": []
     },
-    "colab_type": "code",
-    "id": "GiDFXXcUEy-G",
-    "outputId": "e3cbff08-e3fe-45ad-fff1-6d5c31a5261c"
-   },
-   "outputs": [
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.6"
+    },
+    "accelerator": "TPU"
+  },
+  "cells": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'keras'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-0659e6b25969>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#import needed libs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0m__future__\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mprint_function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatasets\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcifar10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpreprocessing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimage\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mImageDataGenerator\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'keras'"
-     ]
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "9qYJcxpwEyxC"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "NgYV9F8IE2L_"
+      },
+      "source": [
+        "# Exercise 2 - Image Classification with CNNs\n",
+        "![CIFAR10](https://miro.medium.com/max/964/1*syyml8q8s1Yt-iEea5m1Ag.png)\n",
+        "\n",
+        "[CIFAR 10](https://www.cs.toronto.edu/~kriz/cifar.html) is a small toy data set for image classifaction. \n",
+        "\n",
+        "* It has 60k images from ten diffenrent classes (like car, airplane, horse,..)\n",
+        "* The RGB images are of size 32x32 pixels  "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "GiDFXXcUEy-G",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "outputId": "8763282f-12db-46ca-e451-548265f36bc4"
+      },
+      "source": [
+        "#import needed libs\n",
+        "from __future__ import print_function\n",
+        "import keras\n",
+        "from keras.datasets import cifar10\n",
+        "from keras.preprocessing.image import ImageDataGenerator\n",
+        "from keras.models import Sequential\n",
+        "from keras.layers import Dense, Dropout, Activation, Flatten\n",
+        "from keras.layers import Conv2D, MaxPooling2D\n",
+        "import os\n",
+        "\n",
+        "#some vars to controll the training -> use them in your code\n",
+        "batch_size = 32\n",
+        "num_classes = 10 #fixed!\n",
+        "epochs = 10\n",
+        "\n",
+        "# Get the data, split between train and test sets:\n",
+        "(x_train, y_train), (x_test, y_test) = cifar10.load_data()\n",
+        "print('x_train shape:', x_train.shape)\n",
+        "print(x_train.shape[0], 'train samples')\n",
+        "print(x_test.shape[0], 'test samples')\n",
+        "\n",
+        "# Convert class vectors to binary class matrices.\n",
+        "y_train = keras.utils.to_categorical(y_train, num_classes)\n",
+        "y_test = keras.utils.to_categorical(y_test, num_classes)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
+            "170500096/170498071 [==============================] - 2s 0us/step\n",
+            "x_train shape: (50000, 32, 32, 3)\n",
+            "50000 train samples\n",
+            "10000 test samples\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "vmocaCkIGOIR"
+      },
+      "source": [
+        "## Task:\n",
+        "* build and train the ***AlexNet*** CNN architecture from the lecture\n",
+        "* use 'relu' functions for the non-linear activation\n",
+        "* optimize the learning hyper-paramters to get the best  test accuracy"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "9p5AD8mJEzmL",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "841762a7-2a45-4620-e4e0-780bfc372791"
+      },
+      "source": [
+        "model = Sequential()\n",
+        "\n",
+        "model.add(Conv2D(filters=96, input_shape=(32,32,3), kernel_size=(3,3), padding='same'))\n",
+        "model.add(Activation('relu'))\n",
+        "model.add(MaxPooling2D(pool_size=(2,2), padding='same'))\n",
+        "\n",
+        "model.add(Conv2D(filters=256, kernel_size=(3,3),padding='same'))\n",
+        "model.add(Activation('relu'))\n",
+        "model.add(MaxPooling2D(pool_size=(2,2),padding='same'))\n",
+        "\n",
+        "model.add(Conv2D(filters=384, kernel_size=(3,3),padding='same'))\n",
+        "model.add(Activation('relu'))\n",
+        "\n",
+        "model.add(Conv2D(filters=384, kernel_size=(3,3),padding='same'))\n",
+        "model.add(Activation('relu'))\n",
+        "\n",
+        "model.add(Conv2D(filters=256, kernel_size=(3,3),padding='same'))\n",
+        "model.add(Activation('relu'))\n",
+        "model.add(MaxPooling2D(pool_size=(2,2),padding='same'))\n",
+        "\n",
+        "model.add(Flatten())\n",
+        "model.add(Dense(4096, input_shape=(32*32*3,)))\n",
+        "model.add(Activation('relu'))\n",
+        "model.add(Dropout(0.4))\n",
+        "\n",
+        "model.add(Dense(4096))\n",
+        "model.add(Activation('relu'))\n",
+        "model.add(Dropout(0.4))\n",
+        "\n",
+        "model.add(Dense(1000))\n",
+        "model.add(Activation('relu'))\n",
+        "model.add(Dropout(0.4))\n",
+        "\n",
+        "model.add(Dense(10))\n",
+        "model.add(Activation('softmax'))\n",
+        "\n",
+        "model.summary()\n",
+        "\n",
+        "model.compile(loss=keras.losses.categorical_crossentropy, optimizer='adam', metrics=['accuracy'])"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential_6\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "conv2d_26 (Conv2D)           (None, 32, 32, 96)        2688      \n",
+            "_________________________________________________________________\n",
+            "activation_46 (Activation)   (None, 32, 32, 96)        0         \n",
+            "_________________________________________________________________\n",
+            "max_pooling2d_16 (MaxPooling (None, 16, 16, 96)        0         \n",
+            "_________________________________________________________________\n",
+            "conv2d_27 (Conv2D)           (None, 16, 16, 256)       221440    \n",
+            "_________________________________________________________________\n",
+            "activation_47 (Activation)   (None, 16, 16, 256)       0         \n",
+            "_________________________________________________________________\n",
+            "max_pooling2d_17 (MaxPooling (None, 8, 8, 256)         0         \n",
+            "_________________________________________________________________\n",
+            "conv2d_28 (Conv2D)           (None, 8, 8, 384)         885120    \n",
+            "_________________________________________________________________\n",
+            "activation_48 (Activation)   (None, 8, 8, 384)         0         \n",
+            "_________________________________________________________________\n",
+            "conv2d_29 (Conv2D)           (None, 8, 8, 384)         1327488   \n",
+            "_________________________________________________________________\n",
+            "activation_49 (Activation)   (None, 8, 8, 384)         0         \n",
+            "_________________________________________________________________\n",
+            "conv2d_30 (Conv2D)           (None, 8, 8, 256)         884992    \n",
+            "_________________________________________________________________\n",
+            "activation_50 (Activation)   (None, 8, 8, 256)         0         \n",
+            "_________________________________________________________________\n",
+            "max_pooling2d_18 (MaxPooling (None, 4, 4, 256)         0         \n",
+            "_________________________________________________________________\n",
+            "flatten_6 (Flatten)          (None, 4096)              0         \n",
+            "_________________________________________________________________\n",
+            "dense_21 (Dense)             (None, 4096)              16781312  \n",
+            "_________________________________________________________________\n",
+            "activation_51 (Activation)   (None, 4096)              0         \n",
+            "_________________________________________________________________\n",
+            "dropout_16 (Dropout)         (None, 4096)              0         \n",
+            "_________________________________________________________________\n",
+            "dense_22 (Dense)             (None, 4096)              16781312  \n",
+            "_________________________________________________________________\n",
+            "activation_52 (Activation)   (None, 4096)              0         \n",
+            "_________________________________________________________________\n",
+            "dropout_17 (Dropout)         (None, 4096)              0         \n",
+            "_________________________________________________________________\n",
+            "dense_23 (Dense)             (None, 1000)              4097000   \n",
+            "_________________________________________________________________\n",
+            "activation_53 (Activation)   (None, 1000)              0         \n",
+            "_________________________________________________________________\n",
+            "dropout_18 (Dropout)         (None, 1000)              0         \n",
+            "_________________________________________________________________\n",
+            "dense_24 (Dense)             (None, 10)                10010     \n",
+            "_________________________________________________________________\n",
+            "activation_54 (Activation)   (None, 10)                0         \n",
+            "=================================================================\n",
+            "Total params: 40,991,362\n",
+            "Trainable params: 40,991,362\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xeWcUlm7_5gP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "2f43bbcb-8927-4146-e9c0-e8402990866e"
+      },
+      "source": [
+        "model.fit(x_train, y_train,batch_size=batch_size,epochs=epochs,shuffle=True)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/10\n",
+            "50000/50000 [==============================] - 2477s 50ms/step - loss: 2.3916 - accuracy: 0.0991\n",
+            "Epoch 2/10\n",
+            "19296/50000 [==========>...................] - ETA: 25:25 - loss: 2.3029 - accuracy: 0.0983"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1DeJOUGZAZ0g",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model.evaluate(x_test, y_test)"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
-   ],
-   "source": [
-    "#import needed libs\n",
-    "from __future__ import print_function\n",
-    "import keras\n",
-    "from keras.datasets import cifar10\n",
-    "from keras.preprocessing.image import ImageDataGenerator\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Dropout, Activation, Flatten\n",
-    "from keras.layers import Conv2D, MaxPooling2D\n",
-    "import os\n",
-    "\n",
-    "#some vars to controll the training -> use them in your code\n",
-    "batch_size = 32\n",
-    "num_classes = 10 #fixed!\n",
-    "epochs = 10\n",
-    "\n",
-    "# Get the data, split between train and test sets:\n",
-    "(x_train, y_train), (x_test, y_test) = cifar10.load_data()\n",
-    "print('x_train shape:', x_train.shape)\n",
-    "print(x_train.shape[0], 'train samples')\n",
-    "print(x_test.shape[0], 'test samples')\n",
-    "\n",
-    "# Convert class vectors to binary class matrices.\n",
-    "y_train = keras.utils.to_categorical(y_train, num_classes)\n",
-    "y_test = keras.utils.to_categorical(y_test, num_classes)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "vmocaCkIGOIR"
-   },
-   "source": [
-    "## Task:\n",
-    "* build and train the ***AlexNet*** CNN architecture from the lecture\n",
-    "* use 'relu' functions for the non-linear activation\n",
-    "* optimize the learning hyper-paramters to get the best  test accuracy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "9p5AD8mJEzmL"
-   },
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "colab": {
-   "authorship_tag": "ABX9TyNf3zsQ09eG2yXL744V24PB",
-   "name": "Exercise_2 .ipynb",
-   "provenance": []
-  },
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
+  ]
 }
